--- a/index.html
+++ b/index.html
@@ -9,49 +9,50 @@
   </head>
   <body>
     <form action="" method="post">
-      <section class="gr1">
-        <fieldset>
-          <label for="fname">FIRST NAME</label>
-          <input type="text" placeholder="Michael" id="fname" name="fname" />
-        </fieldset>
-        <fieldset>
-          <label for="fname">Last Name</label>
-          <input type="text" placeholder="Sweeney" id="lname" name="lname" />
-        </fieldset>
-        <fieldset>
-          <label for="email">EMAIL ADDRESS</label>
-          <input
-            type="email"
-            placeholder="mike@punchcode.com"
-            id="email"
-            name="email"
-          />
-        </fieldset>
+      <fieldset>
+        <label for="fname">FIRST NAME</label>
+        <input type="text" placeholder="Michael" id="fname" name="fname" />
+
+        <label for="fname">Last Name</label>
+        <input type="text" placeholder="Sweeney" id="lname" name="lname" />
+
+        <label for="email">EMAIL ADDRESS</label>
+        <input
+          type="email"
+          placeholder="mike@punchcode.com"
+          id="email"
+          name="email"
+        />
+
+        <label for="country">Country</label>
         <select name="country" id="country">
           <option>Choose a country</option>
           <option value="USA">USA</option>
           <option value="Mexico">Mexico</option>
         </select>
-        <fieldset>
-          <label for="country">BIOGRAPHY</label>
-          <textarea name="bio"></textarea>
-        </fieldset>
-      </section>
-      <section class="g2">
-        <fieldset>
-          <label for="phone">PHONE NUMBER</label>
-          <input
-            type="tel"
-            placeholder="+351 999 9999"
-            id="phone"
-            name="phone"
-          />
-        </fieldset>
-        <fieldset>
-          <label for="affil">AFFILIATIONS</label>
-          <textarea name="affil"></textarea>
-        </fieldset>
-      </section>
+
+        <label for="country">BIOGRAPHY</label>
+        <textarea name="bio"></textarea>
+      </fieldset>
+      <fieldset>
+        <label for="phone">PHONE NUMBER</label>
+        <input type="tel" placeholder="+351 999 9999" id="phone" name="phone" />
+
+        <label for="affil">AFFILIATIONS</label>
+        <textarea name="affil"></textarea>
+
+        <select name="occupation" id="occupation">
+          <option>Choose an occupation</option>
+          <option value="code">Coder</option>
+          <option value="it">IT Tech</option>
+        </select>
+
+        <label for="phone">PHONE NUMBER</label>
+        <input type="text" placeholder="Kity" id="Kity" name="Kity" />
+
+        <label for="phone">FAVORITE GADGET</label>
+        <input type="text" placeholder="Annoy-a-tron" id="fav" name="fav" />
+      </fieldset>
     </form>
   </body>
 </html>
