--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <label for="fname">FIRST NAME</label>
         <input type="text" placeholder="Michael" id="fname" name="fname" />
 
-        <label for="fname">Last Name</label>
+        <label for="fname">LAST NAME</label>
         <input type="text" placeholder="Sweeney" id="lname" name="lname" />
 
         <label for="email">EMAIL ADDRESS</label>
@@ -24,14 +24,14 @@
           name="email"
         />
 
-        <label for="country">Country</label>
+        <label for="country">COUNTRY</label>
         <select name="country" id="country">
           <option>Choose a country</option>
           <option value="USA">USA</option>
           <option value="Mexico">Mexico</option>
         </select>
 
-        <label for="country">BIOGRAPHY</label>
+        <label for="bio">BIOGRAPHY</label>
         <textarea name="bio"></textarea>
       </fieldset>
       <fieldset>
@@ -40,7 +40,7 @@
 
         <label for="affil">AFFILIATIONS</label>
         <textarea name="affil"></textarea>
-
+        <label for="occupation">OCCUPATION</label>
         <select name="occupation" id="occupation">
           <option>Choose an occupation</option>
           <option value="code">Coder</option>
@@ -52,6 +52,26 @@
 
         <label for="phone">FAVORITE GADGET</label>
         <input type="text" placeholder="Annoy-a-tron" id="fav" name="fav" />
+      </fieldset>
+      <fieldset>
+        <label for="talent">TYPE OF TALENT</label>
+        <select name="talent" id="talent">
+          <option>Choose a talent</option>
+          <option value="sing">Singer</option>
+          <option value="piano">Pianist</option>
+        </select>
+
+        <label for="drink">FAVORITE DRINK</label>
+        <input type="text" placeholder="Green Tea" id="drink" name="drink" />
+
+        <label for="power">SPECIAL POWER</label>
+        <input type="text" placeholder="Anti-gravity" id="power" name="power" />
+
+        <label for="weapon">WEAPON OF CHOICE</label>
+        <input type="text" placeholder="Lightsaber" id="weapon" name="weapon" />
+
+        <label for="comment">COMMENTS</label>
+        <textarea name="comment"></textarea>
       </fieldset>
     </form>
   </body>
